index.css
.dashboard { background-color: rgba(20, 121, 255, 0.1); }
.shift { background-color: rgba(20, 121, 255, 0.2); }
.current { background-color:white; }
.dash-title {font-weight: bold;}
.secondary {font-weight: bold;}
.no-ptr {pointer-events: none;}
.hide {display: none;}

.slider {
    margin-left: 10px;
    width: 760px;
    text-align: center;
    overflow: hidden;
  }
  .slides {
    display: flex;
    
    overflow-x: auto;
    scroll-snap-type: x mandatory;
    
    
    
    scroll-behavior: smooth;
    -webkit-overflow-scrolling: touch;
    
    /*
    scroll-snap-points-x: repeat(300px);
    scroll-snap-type: mandatory;
    */
  }
  
  .slides::-webkit-scrollbar {
    width: 10px;
    height: 10px;
  }
  .slides::-webkit-scrollbar-thumb {
    background: black;
    border-radius: 10px;
  }
  .slides::-webkit-scrollbar-track {
    background: transparent;
  }
  .slides > div {
    list-style-type:none;
    scroll-snap-align: start;
    flex-shrink: 0;
    line-height: 50px;
    margin: 1%;
    margin-right: 6px;
    border-radius: 10px;
    background: #eee;
    transform-origin: center center;
    transform: scale(1);
    transition: transform 0.5s;
    position: relative;
    
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 16px;
  }
  .author-info {
    background: rgba(0, 0, 0, 0.75);
    color: white;
    padding: 0.75rem;
    text-align: center;
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    margin: 0;
  }
  .author-info a {
    color: white;
  }
  #slideNumbers > a {
    display: inline-flex;
    width: 1.5rem;
    height: 1.5rem;
    background: white;
    text-decoration: none;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    margin: 0 0 0.5rem 0;
    position: relative;
  }
  #slideNumbers > a:active {
    top: 1px;
  }
  #slideNumbers > a:focus {
    background: #000;
  }


.dot {
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}
.active, .dot:hover {
    background-color: #717171;
}

#repCommentLabel{
    margin-left: 90%;
}

div.card.shadow.m {
    transition: 100ms;
}
div.card.shadow.open {
    transition: 50ms;
}

.m {
    -webkit-transform-origin: 100% 50%;
    transform-origin: 100% 50%;
    transform: translateX(40px);
    opacity: 0.1;
}

.open {
    -webkit-transform-origin: 100% 50%;
    transform-origin: 100% 50%;
    transform: translateX(0px);
}

/* container for listing appointments, patients, and report meters */
.flex-container{
    padding: 0;
    margin: 0;
    list-style: none;

    -ms-box-orient: horizontal;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -moz-flex;
    display: -webkit-flex;
    display: flex;

    -webkit-justify-content: space-around;
    justify-content: space-around;
    -webkit-flex-flow: row wrap;
    flex-flow: row-wrap;
    -webkit-align-items: stretch;
    align-items: stretch;
}

/* list of patients under today's appointments */
.flex-item:nth-of-type(1){ flex-grow: 1;}
.flex-item:nth-of-type(2){ flex-grow: 1;}
.flex-item:nth-of-type(3){ flex-grow: 1;}
.flex-item:nth-of-type(4){ flex-grow: 1;}
.flex-item:nth-of-type(5){ flex-grow: 1;}

.flex-item {
    line-height: 50px;
    margin: 1%;
}

/* scrollbar styling for reports modal */
/* Works on Firefox */
#reportsModalBody {
    scrollbar-width: thin;
    scrollbar-color:rgba(20, 121, 255, 0.2) rgb(228, 235, 236);
  }
  
  /* Works on Chrome, Edge, and Safari */
  #reportsModalBody::-webkit-scrollbar {
    width: 12px;
  }
  
  #reportsModalBody::-webkit-scrollbar-track {
    background: rgb(228, 235, 236);
  }
  
  #reportsModalBody::-webkit-scrollbar-thumb {
    background-color: rgba(20, 121, 255, 0.2);
    border-radius: 20px;
    border: 3px solid rgb(228, 235, 236);
  }

/* hide scrollbar for dashboard shift schedule */
/* Hide scrollbar for Chrome, Safari and Opera */
.sched-container::-webkit-scrollbar {
    display: none;
  }
  
  /* Hide scrollbar for IE, Edge and Firefox */
  .sched-container {
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
  }

/* dashboard shift schedule */
.sched-item-icon {
    color: grey;
    margin: 1%;
    width: 10%;
}
.sched-item-content {
    color: grey;
    margin: 1%;
    width: 50%;
}
.sched-item {
    color: grey;
    margin: 1%;
}
.start-shift {
    color: grey;
    margin: 1%;
}

/* monthly reports section */
.report-item {
    margin: 1%;
}

.report-item:nth-of-type(1){ flex-grow: 1;}
.report-item:nth-of-type(2){ flex-grow: 1;}

.report-item1:nth-of-type(1){ flex-grow: 1;}
.report-item1:nth-of-type(2){ flex-grow: 8; font-weight: bold; text-align: left;}

/* direction buttons for today's appointments */
.direction{
    border-radius: 50%;
    border: none;
    outline: 0 !important;
    background-color: rgba(0, 0, 255, 0.2);
}
#prev{
    position: absolute;
    left: 5px;
    bottom: 265px;
    font-weight: bolder;
    font-size: 20px;
}

#next{
    position: absolute;
    right: 5px;
    bottom: 265px;
    font-weight: bolder;
    font-size: 20px;
}

/* hide alert divs */
.alert-off {
    display: none;
}

@keyframes fadeIn {
    0% {opacity: 0;}
    100% {opacity: 1;}
}

@keyframes fadeOut {
    0% {opacity: 1; display: inline;}
    100% {opacity: 0;}
}
.alert-item{
    z-index: 1;
    position: fixed;
    transform: translateY(-50%);
    display: inline;
    height: 60px;
    width: 200px;
    justify-content: center;
    align-items: center;
    text-align: center;
    top: 8%;
    left: 43%;
    border-radius: 20px;
}
.reminder-item{
    z-index: 1;
    position: fixed;
    transform: translateY(-50%);
    height: 50px;
    width: 500px;
    justify-content: center;
    align-items: center;
    text-align: center;
    top: 6%;
    left: 32%;
}
.fade-out{
    -webkit-animation-duration: 2s;
    animation-duration: 2s;
    -webkit-animation-name: fadeOut;
    animation-name: fadeOut;
}
.fade-in{
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
    -webkit-animation-name: fadeIn;
    animation-name: fadeIn;
}
.fadeOutSuccess{
    z-index: 7000;
    color: #3c763d;
    background-color: #dff0d8;
    border-color: #d6e9c6;
}
.fadeOutWarning{
    z-index: 7000;
    color: #8a6d3b;
    background-color: #fcf8e3;
    border-color: #faebcc;
}
.fadeOutFailure{
    z-index: 7000;
    color: #a94442;
    background-color: #f2dede;
    border-color: #ebccd1;
}
.fadeOutReminder{
  color: #3c763d;
  /* background-color: #dff0d8; */
  background-color: rgba(103, 194, 106, 0.2);
  border: solid;
  border-color: grey;
  border-radius: 10px;
  border-width: 1px;
}

.fadeInSuccess{
    z-index: 7000;
    color: #3c763d;
    background-color: #dff0d8;
    border-color: #d6e9c6;
}
.fadeInWarning{
    z-index: 7000;
    color: #8a6d3b;
    background-color: #fcf8e3;
    border-color: #faebcc;
}
.fadeInFailure{
    z-index: 7000;
    color: #a94442;
    background-color: #f2dede;
    border-color: #ebccd1;
}
.fadeInReminder{
  color: #3c763d;
  background-color: rgba(103, 194, 106, 0.2);
  border:black;
  border: solid;
  border-color: grey;
  border-radius: 10px;
  border-width: 1px;
}
.centerAlert{
    display: flex;
    justify-content: center;
    align-items: center;
}

/* icons in report log */
.fa-trash-alt{
  color: red;
  margin-left: 5px;
}

#exampleModalLongTitle{
    text-transform: capitalize;
}

/* schedule appointment modal */
#app-start-time, #app-end-time{
    margin-left: 5px;
}
#label-end-time{
    margin-left: 50px;
}
#first-name{
    margin-left: 2px;
}
#last-name{
    margin-left: 6px;
}

@media only screen and (max-width: 768px) {
    /* For mobile phones: */

    #repCommentLabel{
        margin-left: 85%;
    }
    

    /* schedule appointment modal */
    #app-sched-modal-time span:last-of-type {
        display: block;
    }
    #app-sched-modal-time span::before {
        content: "\a";
        white-space: pre;
    }
    #label-end-time{
        margin-left: 0px;
    }
    #app-end-time{
        margin-left: 11px;
    }  

    /* alerts */
    .fadeInSuccess{
        color: #3c763d;
        background-color: #dff0d8;
        border-color: #d6e9c6;
        left: 22%;
    }
    .fadeInWarning{
        color: #8a6d3b;
        background-color: #fcf8e3;
        border-color: #faebcc;
        left: 22%;
    }
    .fadeInFailure{
        color: #a94442;
        background-color: #f2dede;
        border-color: #ebccd1;
        left: 22%;
    }
    .fadeOutSuccess{
        color: #3c763d;
        background-color: #dff0d8;
        border-color: #d6e9c6;
        left: 22%;
    }
    .fadeOutWarning{
        color: #8a6d3b;
        background-color: #fcf8e3;
        border-color: #faebcc;
        left: 22%;
    }
    .fadeOutFailure{
        color: #a94442;
        background-color: #f2dede;
        border-color: #ebccd1;
        left: 22%;
    }
    .reminder-item{
        z-index: 1;
        position: fixed;
        transform: translateY(-50%);
        height: 50px;
        width: 300px;
        justify-content: center;
        align-items: center;
        text-align: center;
        top: 5%;
        left: 10%;
    }

    /* today's appointments */
    #prev{
        position: absolute;
        left: 3px;
        bottom: 455px;
    }
    #next{
        position: absolute;
        right: 3px;
        bottom: 455px;
    }        
}

